Updated to add dark mode feature, fixed a display datetime issue with darkmode implemented

--- a/Assignment1/frontend/src/MainContainer/ChatContainer/Topbar/DropDown/Dropdown.scss
+++ b/Assignment1/frontend/src/MainContainer/ChatContainer/Topbar/DropDown/Dropdown.scss
@@ -107,12 +107,15 @@
   .dropdown-menu {
     background-color: $bgDark;
   }
+  .dropdown-menu-list {
+    background-color: $bgDark;
+  }
   .dropdown-menu-item {
-    color: $textPrimary;
+    color: $textSecondary;
     border-color: $dropDownOutlineBorderDark;
   }
   .bars {
-    color: $textPrimary;
+    color: $textSecondary;
     &:active {
       cursor: pointer;
       background-color: $dropdownPrimary;
