--- a/Assignment1/frontend/src/MainContainer/ChatContainer/Topbar/DropDown/Modal/CustomDate/CustomDate.scss
+++ b/Assignment1/frontend/src/MainContainer/ChatContainer/Topbar/DropDown/Modal/CustomDate/CustomDate.scss
@@ -74,13 +74,17 @@ hr {
 .dark {
   h2,
   h3 {
-    color: $textPrimary;
+    color: $textSecondary;
   }
   .calendar {
-    color: $textPrimary;
+    color: $textSecondary;
   }
   .date-picker-item {
-    color: $textPrimary;
+    color: $textSecondary;
+     &:hover {
+         cursor: pointer;
+         background-color: $dropdownSecondary;
+     }
   }
 
   .custom-submit {
